[package]
name = "mt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
chrono = "0.4"
regex = "1"
lazy_static = "1.4.0"
home = "0.5.3"
structopt = "0.3"
